--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 </head>
 <body>
     <canvas id="canvas" width="800" height="600"></canvas>
+    <script src="game.js"></script>
 </body>
 </html>
